package civictech.kernel.port

enum class PortDirection {
    INPUT,
    OUTPUT,
    IO // Input & Output
}