package civictech.runtime.suspending

import civictech.kernel.computelet.Computelet

class SuspendingComputeletHost {

}